# SerialAgent

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  config.toml.example  start.sh  stop.sh
.github/workflows/: ci.yml  release.yml
apps/dashboard/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/dashboard/src/: App.vue  router.ts
apps/dashboard/src-tauri/: Cargo.toml  tauri.conf.json
apps/dashboard/src-tauri/src/: lib.rs  main.rs
apps/dashboard/src/__tests__/: router.test.ts
apps/dashboard/src/api/: client.ts  sse.ts
apps/dashboard/src/api/__tests__/: client.test.ts  sse.test.ts
apps/dashboard/src/components/: Card.vue  CodeAccordion.vue  ConfigEditor.vue  EmptyState.vue  ErrorBoundary.vue  ExecApproval.vue  LoadingPanel.vue  NavBar.vue  RunStatusBadge.vue  StatusDot.vue  ThoughtBubble.vue  TimezonePicker.vue
apps/dashboard/src/components/__tests__/: Card.test.ts  EmptyState.test.ts  LoadingPanel.test.ts  NavBar.test.ts  RunStatusBadge.test.ts  StatusDot.test.ts  ThoughtBubble.test.ts
apps/dashboard/src/composables/: useOpenClawImport.ts  useSSE.ts  useTheme.ts
apps/dashboard/src/composables/__tests__/: useTheme.test.ts
apps/dashboard/src/pages/: Agents.vue  Chat.vue  ImportOpenClaw.vue  Inbox.vue  LlmReadiness.vue  Logs.vue  Nodes.vue  Overview.vue  RunDetail.vue  Runs.vue  ScheduleDetail.vue  Schedules.vue  SessionDetail.vue  Sessions.vue  Settings.vue  SkillsEngine.vue  Staging.vue  Usage.vue
apps/dashboard/src/utils/: tauri.ts  toml.ts
apps/dashboard/src/utils/__tests__/: toml.test.ts
crates/contextpack/: Cargo.toml
crates/contextpack/src/: builder.rs  injection.rs  lib.rs  report.rs  truncation.rs
crates/domain/: Cargo.toml
crates/domain/src/: capability.rs  config.rs  error.rs  lib.rs  stream.rs  tool.rs  trace.rs
crates/domain/src/config/: agents.rs  compaction.rs  context.rs  llm.rs  mcp.rs  mod.rs  observability.rs  pruning.rs  quota.rs  serial_memory.rs  server.rs  sessions.rs  tasks.rs  tools.rs  workspace.rs
crates/domain/tests/: config_defaults.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: bootstrap.rs  lib.rs  main.rs  pruning.rs  state.rs
crates/gateway/src/api/: admin.rs  agents.rs  auth.rs  chat.rs  clawhub.rs  context.rs  dashboard.rs  deliveries.rs  import_openclaw.rs  inbound.rs  memory.rs  mod.rs  nodes.rs  openai_compat.rs  providers.rs  quota.rs  router.rs  runs.rs  schedules.rs  sessions.rs  skills.rs  tasks.rs  tools.rs  webhooks.rs
crates/gateway/src/api/admin/: guard.rs  health.rs  import_legacy.rs  import_staging.rs  mod.rs  workspace.rs
crates/gateway/src/cli/: chat.rs  config.rs  doctor.rs  import_cmd.rs  init.rs  login.rs  mod.rs  pid.rs  run.rs  systemd.rs
crates/gateway/src/import/: mod.rs  openclaw.rs
crates/gateway/src/import/openclaw/: config_gen.rs  copy.rs  extract.rs  fetch.rs  mod.rs  sanitize.rs  scan.rs  staging.rs
crates/gateway/src/nodes/: mod.rs  registry.rs  router.rs  ws.rs
crates/gateway/src/runtime/: agent.rs  approval.rs  cancel.rs  compact.rs  deliveries.rs  digest.rs  mod.rs  quota.rs  runs.rs  schedule_runner.rs  schedules.rs  session_lock.rs  tasks.rs  tools.rs  turn.rs
crates/gateway/src/runtime/schedules/: cron.rs  mod.rs  model.rs  store.rs  validation.rs
crates/gateway/src/skills/: mod.rs  web_fetch.rs
crates/gateway/src/workspace/: bootstrap.rs  files.rs  mod.rs
crates/hello-node/: Cargo.toml
crates/hello-node/src/: main.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: config.rs  lib.rs  manager.rs  protocol.rs  transport.rs
crates/node-protocol/: Cargo.toml
crates/node-protocol/src/: lib.rs
crates/node-sdk/: Cargo.toml
crates/node-sdk/src/: builder.rs  client.rs  lib.rs  reconnect.rs  registry.rs  types.rs
crates/node-sdk/tests/: protocol_loop.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  auth.rs  bedrock.rs  classifier.rs  decisions.rs  google.rs  lib.rs  oauth.rs  openai_compat.rs  registry.rs  router.rs  smart_router.rs  sse.rs  traits.rs  util.rs
crates/providers/tests/: router_integration.rs
crates/sa-node-macos/: Cargo.toml
crates/sa-node-macos/src/: main.rs
crates/sa-node-macos/src/platform/: applescript.rs  mod.rs
crates/sa-node-macos/src/tools/: clipboard.rs  mod.rs  notes.rs
crates/serialmemory-client/: Cargo.toml
crates/serialmemory-client/src/: lib.rs  mcp.rs  provider.rs  rest.rs  types.rs  user_facts.rs
crates/sessions/: Cargo.toml
crates/sessions/src/: identity.rs  lib.rs  lifecycle.rs  search.rs  session_key.rs  store.rs  transcript.rs
crates/skills/: Cargo.toml
crates/skills/src/: aliases.rs  installer.rs  lib.rs  loader.rs  manifest.rs  registry.rs  types.rs
crates/tools/: Cargo.toml
crates/tools/src/: exec.rs  file_ops.rs  lib.rs  manager.rs  process.rs
deploy/: README.md  com.serialagent.plist  docker-compose.yml  serialagent.service
deploy/searxng/: settings.yml
docs/: channel-adapters.md  deployment.md  gap-analysis-accomplish.md  gap-analysis.md  plugin-sdk.md
docs/plans/: 2026-02-16-code-quality-refactoring.md  2026-02-16-security-hardening.md  2026-02-19-gap-closing-roadmap.md  2026-02-21-llm-router-design.md  2026-02-21-llm-router-plan.md
src/: config.rs  error.rs  lib.rs  main.rs  trace.rs
src/api/: context.rs  dashboard.rs  memory.rs  mod.rs  skills.rs
src/context/: builder.rs  injection.rs  report.rs  truncation.rs
src/memory/: client.rs  mod.rs  types.rs  user_facts.rs
src/skills/: loader.rs  registry.rs  types.rs
src/workspace/: bootstrap.rs  files.rs
workspace/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md
