[package]
name = "serial-assistant"
version = "0.1.0"
edition = "2021"
description = "AI Assistant orchestrator with SerialMemory backend — context pack builder, skills registry, and introspection API"
authors = ["sblanchard"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client (SerialMemory REST API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Hashing (file cache integrity)
sha2 = "0.10"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
