[package]
name = "sa-domain"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures-core = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
