[package]
name = "sa-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "serialagent"
path = "src/main.rs"

[dependencies]
sa-domain = { workspace = true }
sa-contextpack = { workspace = true }
sa-skills = { workspace = true }
sa-memory = { workspace = true }
sa-providers = { workspace = true }
sa-protocol = { workspace = true }
sa-sessions = { workspace = true }
sa-tools = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
glob = "0.3"
thiserror = { workspace = true }
