[package]
name = "sa-hello-node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sa-hello-node"
path = "src/main.rs"

[dependencies]
sa-protocol = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
