[package]
name = "sa-providers"
version.workspace = true
edition.workspace = true

[dependencies]
sa-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures-core = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
keyring = { workspace = true }
