[package]
name = "sa-providers"
version.workspace = true
edition.workspace = true

[dependencies]
sa-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
tokio = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures-core = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
keyring = { workspace = true }
chrono = { workspace = true }
dirs = "5"
fs2 = "0.4"
tempfile = { workspace = true }
