[package]
name = "sa-sessions"
version.workspace = true
edition.workspace = true

[dependencies]
sa-domain = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
