[package]
name = "sa-skills"
version.workspace = true
edition.workspace = true

[dependencies]
sa-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
tempfile = "3"
