[package]
name = "sa-dashboard-app"
version = "0.2.0"
edition = "2021"
description = "SerialAssistant desktop dashboard"
authors = ["sblanchard"]
default-run = "sa-dashboard-app"

[lib]
name = "sa_dashboard_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "sa-dashboard-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
